<resources>
    <string name="app_name">nutriwise</string>

    <string name="navigation_drawer_open"> Open navigation drawer</string>
    <string name="navigation_drawer_close"> Close navigation drawer</string>

    <string name="title_weight_activity">Daily Weights Log</string>
    <string name="button_change_target_weight">Change target weight</string>
    <string name="goal_text">TARGET WEIGHT: </string>
    <string name="default_goal_weight">Default is 150.0 lbs</string>
    <string name="add_popup_title">Enter New Weight Record</string>
    <string name="change_title">Change Weight Record</string>
    <string name="targetWeight_popup_title">Change Target Weight</string>
    <string name="change_record_prompt">PLEASE ENTER A DATE TO CHANGE</string>
    <string name="delete_record_title">Delete a Record</string>
    <string name="delete_record_prompt">PLEASE ENTER A DATE TO DELETE</string>
    <string name="header_weight"><u>WEIGHT (LBS)</u></string>
    <string name="header_date"><u>DATE</u></string>
    <string name="date_hint">Date (MM/DD/YYYY)</string>
    <string name="no_date">no weights to show...</string>
    <string name="no_weight">Please add records with the above button</string>
    <string name="age">Age</string>
    <string name="username">string</string>
    <string name="password">string</string>
    <string name="Forgot_Password" />
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="Age">Age</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="sign_up">SIGN UP</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="already_user_login_here">Already user? Login here</string>
    <string name="_295_5">295.5</string>
    <string name="of_1200_kcal">of 1200 kcal</string>
    <string name="proteins_gr">Proteins, gr</string>
    <string name="_19_5">19.5</string>
    <string name="of_97">of 97</string>
    <string name="fats_gr">Fats, gr</string>
    <string name="_7_5">7.5</string>
    <string name="of_28_7">of 28.7</string>
    <string name="carbs_gr">Carbs, gr</string>
    <string name="_37_7">37.7</string>
    <string name="of_161_6">of 161.6</string>
    <string name="breakfast">Breakfast</string>
    <string name="_295_5_kcal">295.5 kcal</string>
    <string name="_390_gr">390 gr</string>
    <string name="p">P</string>
    <string name="_19_5_gr">19.5 gr</string>
    <string name="f">F</string>
    <string name="_7_5_gr">7.5 gr</string>
    <string name="c">C</string>
    <string name="_37_7_gr">37.7 gr</string>
    <string name="add">Add</string>
    <string name="lunch">Lunch</string>
    <string name="recommended_600_kcal">Recommended 600 kcal</string>
    <string name="Add">Add</string>
    <string name="todo">TODO</string>
    <string name="dash_second">dash second</string>
    <string name="_10">- 10%</string>
    <string name="__10">+ 10%</string>
    <string name="_1kg">- 1KG</string>
    <string name="__1kg">+ 1KG</string>
    <string name="log_your_weight_here">Log your weight here!!</string>
    <string name="nutriwise">Nutriwise</string>
    <string name="oat">🌾</string>
    <string name="oat_milk">Oat milk</string>
    <string name="_150_ml">150 ml</string>
    <string name="_66_kcal">66 kcal</string>
    <string name="lemon">🍊</string>
    <string name="orange_juice">Orange juice</string>
    <string name="_80_ml">80 ml</string>
    <string name="_28_8_kcal">28.8 kcal</string>
    <string name="cheese">🧀</string>
    <string name="Cheese">Cheese</string>
    <string name="_110_gr">110 gr</string>
    <string name="_200_7_kcal">200.7 kcal</string>
    <string name="ForgotPassword">forgot password</string>
</resources>